code to generate train/test split

--- a/notebooks/dataset_creation.ipynb
+++ b/notebooks/dataset_creation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "0d6bfcd4-d65a-4cd6-9d92-ef804db27fba",
    "metadata": {},
    "outputs": [],
@@ -426,82 +426,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "67a5b4f8-750f-4efc-bb75-728310f23ec9",
+   "execution_count": 13,
+   "id": "a1ddcddb-8e24-4165-8686-6db303395e30",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.03125"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df[']"
+    "from disentanglement_lib.data.ground_truth import named_data\n",
+    "\n",
+    "dsprites = named_data.get_named_ground_truth_data('dsprites_full')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5688812f-ce2c-463a-8ffb-1b8535a79373",
+   "execution_count": 16,
+   "id": "54f854a7-4ca7-4f61-a229-be9cc71a2096",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.00000    3\n",
-       "0.96875    3\n",
-       "0.06250    3\n",
-       "0.09375    3\n",
-       "0.12500    3\n",
-       "0.15625    3\n",
-       "0.18750    3\n",
-       "0.21875    3\n",
-       "0.25000    3\n",
-       "0.28125    3\n",
-       "0.31250    3\n",
-       "0.34375    3\n",
-       "0.37500    3\n",
-       "0.40625    3\n",
-       "0.43750    3\n",
-       "0.46875    3\n",
-       "0.50000    3\n",
-       "0.53125    3\n",
-       "0.56250    3\n",
-       "0.59375    3\n",
-       "0.62500    3\n",
-       "0.65625    3\n",
-       "0.68750    3\n",
-       "0.71875    3\n",
-       "0.75000    3\n",
-       "0.78125    3\n",
-       "0.81250    3\n",
-       "0.84375    3\n",
-       "0.87500    3\n",
-       "0.90625    3\n",
-       "0.93750    3\n",
-       "0.03125    3\n",
-       "Name: conv_encoder.num_parameters_scale, dtype: int64"
+       "array([ 1,  3,  6, 40, 32, 32])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['conv_encoder.num_parameters_scale'].value_counts()"
+    "dsprites.factor_sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7d14dda8-fae6-4644-963e-971706bffae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 6, 40, 32, 32]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dsprites.full_factor_sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8ba5940e-819e-4464-8292-1fe05a5b143e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.3728e+05, 2.4576e+05, 4.0960e+04, 1.0240e+03, 3.2000e+01,\n",
+       "       1.0000e+00])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dsprites.factor_bases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3d920e7d-8b89-4317-a8e7-29da34c93bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 64, 64, 1)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_state = np.random.RandomState(0)\n",
+    "dsprites.sample_observations(10, random_state).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "eb654c9f-a92b-47dc-a028-7cb3f53a76fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split dsprites dataset into two parts\n",
+    "\n",
+    "full_size = np.prod(dsprites.factor_sizes)\n",
+    "train_dataset_size = 700000\n",
+    "train_indices = np.random.choice(full_size, train_dataset_size, replace=False)\n",
+    "train_indices = np.sort(train_indices)\n",
+    "valid_indices = np.delete(np.arange(full_size), train_indices)\n",
+    "\n",
+    "train_indices_path = os.path.join(\n",
+    "    os.environ.get(\"DISENTANGLEMENT_LIB_DATA\", \".\"), \"dsprites\", f\"train700k.npy\"\n",
+    ")\n",
+    "valid_indices_path = os.path.join(\n",
+    "    os.environ.get(\"DISENTANGLEMENT_LIB_DATA\", \".\"), \"dsprites\", f\"valid700k.npy\"\n",
+    ")\n",
+    "np.save(train_indices_path, train_indices)\n",
+    "np.save(valid_indices_path, valid_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "199c869e-c934-4826-a63f-57fb49da2637",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([467061,   4688, 580110])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gg = np.random.choice(valid_indices, 3, replace=True)\n",
+    "gg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c2c21d71-3922-4c75-8b60-df806861e368",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4688 in valid_indices"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1ddcddb-8e24-4165-8686-6db303395e30",
+   "id": "b2adb3e3-6028-4c5c-929e-2f0e3fc7e0dd",
    "metadata": {},
    "outputs": [],
    "source": []
