now has results up to exp v8. can observe double descent curve under small training set and low number of latent units

--- a/notebooks/dataset_creation.ipynb
+++ b/notebooks/dataset_creation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "0d6bfcd4-d65a-4cd6-9d92-ef804db27fba",
    "metadata": {},
    "outputs": [],
@@ -87,13 +87,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea752e60-c552-4dab-8e64-cabc76935cf5",
+   "id": "3da86ba2-4f67-42b4-b3d1-cb969650e5df",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54"
+       "0     1000\n",
+       "1     1000\n",
+       "2     1000\n",
+       "3     1000\n",
+       "4     1000\n",
+       "      ... \n",
+       "67    1000\n",
+       "68    1000\n",
+       "69    1000\n",
+       "70    1000\n",
+       "71    1000\n",
+       "Name: evaluate_every_n_steps, Length: 72, dtype: int64"
       ]
      },
      "execution_count": 3,
@@ -102,12 +113,12 @@
     }
    ],
    "source": [
-    "len(df)"
+    "df['evaluate_every_n_steps']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "d68dbef4-56dc-4519-91c2-b22f669a2b1a",
    "metadata": {},
    "outputs": [
@@ -144,6 +155,9 @@
        "      <th>model.model</th>\n",
        "      <th>conv_encoder.num_parameters_scale</th>\n",
        "      <th>deconv_decoder.num_parameters_scale</th>\n",
+       "      <th>encoder.num_latent</th>\n",
+       "      <th>dataset.num_training_data</th>\n",
+       "      <th>evaluate_every_n_steps</th>\n",
        "      <th>model.random_seed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -160,8 +174,11 @@
        "      <td>beta_vae</td>\n",
        "      <td>0.125</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.03125</td>\n",
-       "      <td>0.03125</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -176,8 +193,11 @@
        "      <td>beta_vae</td>\n",
        "      <td>0.125</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.06250</td>\n",
-       "      <td>0.06250</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -192,8 +212,11 @@
        "      <td>beta_vae</td>\n",
        "      <td>0.125</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.09375</td>\n",
-       "      <td>0.09375</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -208,8 +231,11 @@
        "      <td>beta_vae</td>\n",
        "      <td>0.125</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.12500</td>\n",
-       "      <td>0.12500</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -224,8 +250,11 @@
        "      <td>beta_vae</td>\n",
        "      <td>0.125</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.15625</td>\n",
-       "      <td>0.15625</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -243,9 +272,12 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
+       "      <th>67</th>\n",
        "      <td>[3, 4]</td>\n",
        "      <td>dsprites_full</td>\n",
        "      <td>10.0</td>\n",
@@ -254,14 +286,17 @@
        "      <td>@deconv_decoder</td>\n",
        "      <td>True</td>\n",
        "      <td>beta_vae</td>\n",
-       "      <td>8.000</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.87500</td>\n",
-       "      <td>0.87500</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
+       "      <th>68</th>\n",
        "      <td>[3, 4]</td>\n",
        "      <td>dsprites_full</td>\n",
        "      <td>10.0</td>\n",
@@ -270,14 +305,17 @@
        "      <td>@deconv_decoder</td>\n",
        "      <td>True</td>\n",
        "      <td>beta_vae</td>\n",
-       "      <td>8.000</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.90625</td>\n",
-       "      <td>0.90625</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
+       "      <th>69</th>\n",
        "      <td>[3, 4]</td>\n",
        "      <td>dsprites_full</td>\n",
        "      <td>10.0</td>\n",
@@ -286,14 +324,17 @@
        "      <td>@deconv_decoder</td>\n",
        "      <td>True</td>\n",
        "      <td>beta_vae</td>\n",
-       "      <td>8.000</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.93750</td>\n",
-       "      <td>0.93750</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
+       "      <th>70</th>\n",
        "      <td>[3, 4]</td>\n",
        "      <td>dsprites_full</td>\n",
        "      <td>10.0</td>\n",
@@ -302,14 +343,17 @@
        "      <td>@deconv_decoder</td>\n",
        "      <td>True</td>\n",
        "      <td>beta_vae</td>\n",
-       "      <td>8.000</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>0.96875</td>\n",
-       "      <td>0.96875</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
+       "      <th>71</th>\n",
        "      <td>[3, 4]</td>\n",
        "      <td>dsprites_full</td>\n",
        "      <td>10.0</td>\n",
@@ -318,15 +362,18 @@
        "      <td>@deconv_decoder</td>\n",
        "      <td>True</td>\n",
        "      <td>beta_vae</td>\n",
-       "      <td>8.000</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>@vae()</td>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>1.00000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>96 rows × 13 columns</p>\n",
+       "<p>72 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -337,11 +384,11 @@
        "3                            [3, 4]  dsprites_full   \n",
        "4                            [3, 4]  dsprites_full   \n",
        "..                              ...            ...   \n",
-       "91                           [3, 4]  dsprites_full   \n",
-       "92                           [3, 4]  dsprites_full   \n",
-       "93                           [3, 4]  dsprites_full   \n",
-       "94                           [3, 4]  dsprites_full   \n",
-       "95                           [3, 4]  dsprites_full   \n",
+       "67                           [3, 4]  dsprites_full   \n",
+       "68                           [3, 4]  dsprites_full   \n",
+       "69                           [3, 4]  dsprites_full   \n",
+       "70                           [3, 4]  dsprites_full   \n",
+       "71                           [3, 4]  dsprites_full   \n",
        "\n",
        "    correlation_hyperparameter.line_width correlation_details.corr_type  \\\n",
        "0                                    10.0                          line   \n",
@@ -350,11 +397,11 @@
        "3                                    10.0                          line   \n",
        "4                                    10.0                          line   \n",
        "..                                    ...                           ...   \n",
-       "91                                   10.0                          line   \n",
-       "92                                   10.0                          line   \n",
-       "93                                   10.0                          line   \n",
-       "94                                   10.0                          line   \n",
-       "95                                   10.0                          line   \n",
+       "67                                   10.0                          line   \n",
+       "68                                   10.0                          line   \n",
+       "69                                   10.0                          line   \n",
+       "70                                   10.0                          line   \n",
+       "71                                   10.0                          line   \n",
        "\n",
        "   encoder.encoder_fn decoder.decoder_fn  correlation.active_correlation  \\\n",
        "0       @conv_encoder    @deconv_decoder                            True   \n",
@@ -363,42 +410,55 @@
        "3       @conv_encoder    @deconv_decoder                            True   \n",
        "4       @conv_encoder    @deconv_decoder                            True   \n",
        "..                ...                ...                             ...   \n",
-       "91      @conv_encoder    @deconv_decoder                            True   \n",
-       "92      @conv_encoder    @deconv_decoder                            True   \n",
-       "93      @conv_encoder    @deconv_decoder                            True   \n",
-       "94      @conv_encoder    @deconv_decoder                            True   \n",
-       "95      @conv_encoder    @deconv_decoder                            True   \n",
+       "67      @conv_encoder    @deconv_decoder                            True   \n",
+       "68      @conv_encoder    @deconv_decoder                            True   \n",
+       "69      @conv_encoder    @deconv_decoder                            True   \n",
+       "70      @conv_encoder    @deconv_decoder                            True   \n",
+       "71      @conv_encoder    @deconv_decoder                            True   \n",
        "\n",
        "   model.name  vae.beta model.model  conv_encoder.num_parameters_scale  \\\n",
-       "0    beta_vae     0.125      @vae()                            0.03125   \n",
-       "1    beta_vae     0.125      @vae()                            0.06250   \n",
-       "2    beta_vae     0.125      @vae()                            0.09375   \n",
-       "3    beta_vae     0.125      @vae()                            0.12500   \n",
-       "4    beta_vae     0.125      @vae()                            0.15625   \n",
+       "0    beta_vae     0.125      @vae()                                1.0   \n",
+       "1    beta_vae     0.125      @vae()                                1.0   \n",
+       "2    beta_vae     0.125      @vae()                                1.0   \n",
+       "3    beta_vae     0.125      @vae()                                1.0   \n",
+       "4    beta_vae     0.125      @vae()                                1.0   \n",
        "..        ...       ...         ...                                ...   \n",
-       "91   beta_vae     8.000      @vae()                            0.87500   \n",
-       "92   beta_vae     8.000      @vae()                            0.90625   \n",
-       "93   beta_vae     8.000      @vae()                            0.93750   \n",
-       "94   beta_vae     8.000      @vae()                            0.96875   \n",
-       "95   beta_vae     8.000      @vae()                            1.00000   \n",
+       "67   beta_vae     1.000      @vae()                                1.0   \n",
+       "68   beta_vae     1.000      @vae()                                1.0   \n",
+       "69   beta_vae     1.000      @vae()                                1.0   \n",
+       "70   beta_vae     1.000      @vae()                                1.0   \n",
+       "71   beta_vae     1.000      @vae()                                1.0   \n",
        "\n",
-       "    deconv_decoder.num_parameters_scale  model.random_seed  \n",
-       "0                               0.03125                  0  \n",
-       "1                               0.06250                  0  \n",
-       "2                               0.09375                  0  \n",
-       "3                               0.12500                  0  \n",
-       "4                               0.15625                  0  \n",
-       "..                                  ...                ...  \n",
-       "91                              0.87500                  0  \n",
-       "92                              0.90625                  0  \n",
-       "93                              0.93750                  0  \n",
-       "94                              0.96875                  0  \n",
-       "95                              1.00000                  0  \n",
+       "    deconv_decoder.num_parameters_scale  encoder.num_latent  \\\n",
+       "0                                   1.0                   1   \n",
+       "1                                   1.0                   1   \n",
+       "2                                   1.0                   1   \n",
+       "3                                   1.0                   1   \n",
+       "4                                   1.0                   2   \n",
+       "..                                  ...                 ...   \n",
+       "67                                  1.0                   8   \n",
+       "68                                  1.0                  10   \n",
+       "69                                  1.0                  10   \n",
+       "70                                  1.0                  10   \n",
+       "71                                  1.0                  10   \n",
        "\n",
-       "[96 rows x 13 columns]"
+       "    dataset.num_training_data  evaluate_every_n_steps  model.random_seed  \n",
+       "0                        1000                    1000                  0  \n",
+       "1                        3000                    1000                  0  \n",
+       "2                        5000                    1000                  0  \n",
+       "3                        7000                    1000                  0  \n",
+       "4                        1000                    1000                  0  \n",
+       "..                        ...                     ...                ...  \n",
+       "67                       7000                    1000                  0  \n",
+       "68                       1000                    1000                  0  \n",
+       "69                       3000                    1000                  0  \n",
+       "70                       5000                    1000                  0  \n",
+       "71                       7000                    1000                  0  \n",
+       "\n",
+       "[72 rows x 16 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +466,7 @@
    "source": [
     "# trying to get mapping from specific parameter combinations to model num\n",
     "# from disentanglement_lib.config.unsupervised_study_v1.sweep import get_config\n",
-    "from disentanglement_lib.config.double_descent_study_v2.sweep import get_config\n",
+    "from disentanglement_lib.config.double_descent_study_v8.sweep import get_config\n",
     "import pandas as pd\n",
     "\n",
     "configs = get_config()\n",
@@ -426,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "a1ddcddb-8e24-4165-8686-6db303395e30",
    "metadata": {},
    "outputs": [],
@@ -524,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "eb654c9f-a92b-47dc-a028-7cb3f53a76fd",
    "metadata": {},
    "outputs": [],
@@ -532,16 +592,16 @@
     "# split dsprites dataset into two parts\n",
     "\n",
     "full_size = np.prod(dsprites.factor_sizes)\n",
-    "train_dataset_size = 700000\n",
+    "train_dataset_size = 7000\n",
     "train_indices = np.random.choice(full_size, train_dataset_size, replace=False)\n",
     "train_indices = np.sort(train_indices)\n",
     "valid_indices = np.delete(np.arange(full_size), train_indices)\n",
     "\n",
     "train_indices_path = os.path.join(\n",
-    "    os.environ.get(\"DISENTANGLEMENT_LIB_DATA\", \".\"), \"dsprites\", f\"train700k.npy\"\n",
+    "    os.environ.get(\"DISENTANGLEMENT_LIB_DATA\", \".\"), \"dsprites\", f\"train{train_dataset_size}.npy\"\n",
     ")\n",
     "valid_indices_path = os.path.join(\n",
-    "    os.environ.get(\"DISENTANGLEMENT_LIB_DATA\", \".\"), \"dsprites\", f\"valid700k.npy\"\n",
+    "    os.environ.get(\"DISENTANGLEMENT_LIB_DATA\", \".\"), \"dsprites\", f\"valid{train_dataset_size}.npy\"\n",
     ")\n",
     "np.save(train_indices_path, train_indices)\n",
     "np.save(valid_indices_path, valid_indices)"
@@ -592,8 +652,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b2adb3e3-6028-4c5c-929e-2f0e3fc7e0dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4096"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "64 * 64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b871fc12-5089-4a4a-a7c4-612dcef17c12",
    "metadata": {},
    "outputs": [],
    "source": []
