--- a/notebooks/dataset_creation.ipynb
+++ b/notebooks/dataset_creation.ipynb
@@ -486,61 +486,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "a1ddcddb-8e24-4165-8686-6db303395e30",
    "metadata": {},
    "outputs": [],
    "source": [
     "from disentanglement_lib.data.ground_truth import named_data\n",
-    "\n",
     "dsprites = named_data.get_named_ground_truth_data('dsprites_full')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "54f854a7-4ca7-4f61-a229-be9cc71a2096",
+   "execution_count": 2,
+   "id": "7af00210-e517-4136-87b1-74459c309e08",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  3,  6, 40, 32, 32])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dsprites.factor_sizes"
+    "from disentanglement_lib.data.ground_truth import named_data\n",
+    "\n",
+    "\n",
+    "dsprites_subset = named_data.get_named_ground_truth_data('dsprites_full', False, 'valid', 700000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
+   "id": "54f854a7-4ca7-4f61-a229-be9cc71a2096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_state = np.random.RandomState(0)\n",
+    "factors, images = dsprites_subset.sample(5, random_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "7d14dda8-fae6-4644-963e-971706bffae6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3, 6, 40, 32, 32]"
+       "(5, 64, 64, 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dsprites.full_factor_sizes"
+    "images.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
+   "id": "a92296dc-f6c0-4f6d-840d-66f65477dce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "gg = [1,2,3,4,5,6]\n",
+    "for i in gg[:0:-1]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "482c83f3-ea2e-4214-ac94-ea1aefd3c1cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_factors = 5\n",
+    "\n",
+    "def index_to_factors(index_array, factor_bases):\n",
+    "    factor_bases = factor_bases.astype(int)\n",
+    "    print(factor_bases)\n",
+    "    factors = np.zeros((len(index_array), num_factors))\n",
+    "    for factor_idx, factor_base in enumerate(factor_bases[1:]):\n",
+    "        factors[:, factor_idx], index_array = np.divmod(index_array, factor_base)\n",
+    "    return factors\n",
+    "\n",
+    "def factors_to_index(factor_array, factor_bases):\n",
+    "    indices = np.array(np.dot(factor_array, factor_bases), dtype=np.int64)\n",
+    "    return indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "23806f4a-e348-4619-8d8f-4d8701ca7e8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[737280 245760  40960   1024     32      1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gg = np.array([10000, 20000, 30000, 700000])\n",
+    "res = index_to_factors(gg, dsprites.factor_bases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1774986f-066a-4f08-8dd4-5fc14831d5cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 10000,  20000,  30000, 700000])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "back = factors_to_index(res, dsprites.factor_bases[1:])\n",
+    "back"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "8ba5940e-819e-4464-8292-1fe05a5b143e",
    "metadata": {},
    "outputs": [
@@ -551,7 +640,7 @@
        "       1.0000e+00])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,24 +651,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "3d920e7d-8b89-4317-a8e7-29da34c93bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a, b = dsprites.sample(10, random_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6014cc1a-0fd4-42c3-a19f-f4ade4d5417b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10, 64, 64, 1)"
+       "(10, 5)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random_state = np.random.RandomState(0)\n",
-    "dsprites.sample_observations(10, random_state).shape"
+    "a.shape"
    ]
   },
   {
@@ -609,23 +708,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "id": "199c869e-c934-4826-a63f-57fb49da2637",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([467061,   4688, 580110])"
+       "array([ 3, 50, 50])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gg = np.random.choice(valid_indices, 3, replace=True)\n",
+    "gg = np.random.choice([10, 50, 3], 3, replace=True)\n",
     "gg"
    ]
   },
@@ -652,23 +751,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "b2adb3e3-6028-4c5c-929e-2f0e3fc7e0dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4096"
+       "3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "64 * 64"
+    "len(gg)"
    ]
   },
   {
