can run through exp v3 with 4 different supervised_selection_criterion

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "2db6067b-1e4e-4d3d-bafc-868530c394ca",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "sys.path.append(os.path.abspath(\"/home/mwu34/disentanglement_lib\"))\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "pd.set_option('precision', 2)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "da0ea9ec-924a-46af-ab2c-3eeb736a81e3",
    "metadata": {},
    "outputs": [
@@ -49,41 +50,23 @@
      "text": [
       "aggregated_result_df shape: (72, 81)\n",
       "metric evaluation_results.disentanglement results: \n",
-      " train_final_config.s2_vae.gamma_sup        1         2         4         6   \\\n",
-      "train_final_config.s2_vae.beta                                                \n",
-      "1                                    0.392072  0.387843  0.406082  0.381558   \n",
-      "2                                    0.445362  0.469128  0.460144  0.459143   \n",
-      "4                                    0.464550  0.488363  0.479319  0.481825   \n",
-      "6                                    0.499161  0.483474  0.482263  0.488694   \n",
-      "8                                    0.500073  0.500889  0.473626  0.483673   \n",
-      "16                                   0.519642  0.511197  0.511113  0.508364   \n",
-      "\n",
-      "train_final_config.s2_vae.gamma_sup        8         16  \n",
-      "train_final_config.s2_vae.beta                           \n",
-      "1                                    0.321410  0.250335  \n",
-      "2                                    0.416831  0.285276  \n",
-      "4                                    0.473050  0.469163  \n",
-      "6                                    0.483513  0.476012  \n",
-      "8                                    0.480868  0.481574  \n",
-      "16                                   0.499793  0.502814  \n",
+      " train_final_config.s2_vae.gamma_sup    1     2     4     6     8     16\n",
+      "train_final_config.s2_vae.beta                                         \n",
+      "1                                    0.39  0.39  0.41  0.38  0.32  0.25\n",
+      "2                                    0.45  0.47  0.46  0.46  0.42  0.29\n",
+      "4                                    0.46  0.49  0.48  0.48  0.47  0.47\n",
+      "6                                    0.50  0.48  0.48  0.49  0.48  0.48\n",
+      "8                                    0.50  0.50  0.47  0.48  0.48  0.48\n",
+      "16                                   0.52  0.51  0.51  0.51  0.50  0.50\n",
       "metric evaluation_results.discrete_mig results: \n",
-      " train_final_config.s2_vae.gamma_sup        1         2         4         6   \\\n",
-      "train_final_config.s2_vae.beta                                                \n",
-      "1                                    0.299062  0.299902  0.293452  0.278422   \n",
-      "2                                    0.348447  0.348130  0.340894  0.337704   \n",
-      "4                                    0.323260  0.334567  0.336317  0.336562   \n",
-      "6                                    0.329633  0.335697  0.337191  0.330206   \n",
-      "8                                    0.333584  0.332529  0.308811  0.305086   \n",
-      "16                                   0.323753  0.300971  0.289935  0.286343   \n",
-      "\n",
-      "train_final_config.s2_vae.gamma_sup        8         16  \n",
-      "train_final_config.s2_vae.beta                           \n",
-      "1                                    0.247451  0.171943  \n",
-      "2                                    0.295445  0.178048  \n",
-      "4                                    0.347465  0.349059  \n",
-      "6                                    0.324675  0.335624  \n",
-      "8                                    0.319624  0.334136  \n",
-      "16                                   0.286988  0.282324  \n"
+      " train_final_config.s2_vae.gamma_sup    1     2     4     6     8     16\n",
+      "train_final_config.s2_vae.beta                                         \n",
+      "1                                    0.30  0.30  0.29  0.28  0.25  0.17\n",
+      "2                                    0.35  0.35  0.34  0.34  0.30  0.18\n",
+      "4                                    0.32  0.33  0.34  0.34  0.35  0.35\n",
+      "6                                    0.33  0.34  0.34  0.33  0.32  0.34\n",
+      "8                                    0.33  0.33  0.31  0.31  0.32  0.33\n",
+      "16                                   0.32  0.30  0.29  0.29  0.29  0.28\n"
      ]
     }
    ],
@@ -117,9 +100,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd149147-3a7d-4ee2-be6b-f076f1804f6e",
+   "metadata": {},
+   "source": [
+    "#### exp v2: criterion 'highest_summed_std' and 'lowest_summed_std'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a089af8d-d4f9-405b-97bf-9870656d03c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aggregated_result_df shape: (72, 82)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.gamma_sup    1     2     4     6     8     16\n",
+      "train_final_config.s2_vae.beta                                         \n",
+      "1                                    0.13  0.13  0.13  0.11  0.12  0.11\n",
+      "2                                    0.18  0.18  0.16  0.20  0.13  0.16\n",
+      "4                                    0.13  0.20  0.22  0.22  0.15  0.15\n",
+      "6                                    0.20  0.17  0.16  0.15  0.13  0.13\n",
+      "8                                    0.11  0.24  0.23  0.18  0.16  0.12\n",
+      "16                                   0.50  0.50  0.50  0.50  0.46  0.48\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.gamma_sup    1     2     4     6     8     16\n",
+      "train_final_config.s2_vae.beta                                         \n",
+      "1                                    0.07  0.05  0.06  0.07  0.06  0.05\n",
+      "2                                    0.08  0.08  0.08  0.11  0.09  0.12\n",
+      "4                                    0.07  0.11  0.15  0.14  0.08  0.05\n",
+      "6                                    0.13  0.10  0.07  0.08  0.05  0.06\n",
+      "8                                    0.04  0.12  0.15  0.08  0.07  0.08\n",
+      "16                                   0.38  0.37  0.38  0.38  0.35  0.36\n",
+      "aggregated_result_df shape: (72, 82)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.gamma_sup    1     2     4     6     8     16\n",
+      "train_final_config.s2_vae.beta                                         \n",
+      "1                                    0.13  0.16  0.13  0.15  0.14  0.08\n",
+      "2                                    0.18  0.16  0.15  0.14  0.14  0.07\n",
+      "4                                    0.19  0.13  0.14  0.19  0.11  0.14\n",
+      "6                                    0.24  0.17  0.12  0.13  0.12  0.19\n",
+      "8                                    0.12  0.12  0.21  0.12  0.10  0.12\n",
+      "16                                   0.36  0.21  0.10  0.08  0.32  0.31\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.gamma_sup    1     2     4     6     8     16\n",
+      "train_final_config.s2_vae.beta                                         \n",
+      "1                                    0.05  0.08  0.07  0.07  0.05  0.02\n",
+      "2                                    0.09  0.08  0.06  0.06  0.06  0.03\n",
+      "4                                    0.10  0.05  0.05  0.08  0.03  0.05\n",
+      "6                                    0.13  0.08  0.05  0.06  0.05  0.12\n",
+      "8                                    0.05  0.07  0.13  0.09  0.07  0.07\n",
+      "16                                   0.22  0.14  0.05  0.04  0.12  0.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v2.json\"\n",
+    "\n",
+    "df = pd.read_json(aggregated_results_path)\n",
+    "df_criterion_1 = df[df[\"train_final_config.model.supervised_selection_criterion\"] == \"'highest_summed_std'\"]\n",
+    "print(f\"aggregated_result_df shape: {df_criterion_1.shape}\")\n",
+    "exp_results = aggregate_metric_results(df_criterion_1, index_name, column_name, metric_names)\n",
+    "for metric in metric_names:\n",
+    "    print(f\"metric {metric} results: \\n {exp_results[metric]}\")\n",
+    "    \n",
+    "df_criterion_2 = df[df[\"train_final_config.model.supervised_selection_criterion\"] == \"'lowest_summed_std'\"]\n",
+    "print(f\"aggregated_result_df shape: {df_criterion_2.shape}\")\n",
+    "exp_results = aggregate_metric_results(df_criterion_2, index_name, column_name, metric_names)\n",
+    "for metric in metric_names:\n",
+    "    print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dc101da-ebb8-424b-afad-cba6dca66c48",
+   "metadata": {},
+   "source": [
+    "#### exp v3: criterion \"highest_summed_std_all_dims\" and \"lowest_summed_std_all_dims\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8bf2c70e-caf3-4d61-b001-e48021004f0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aggregated_result_df shape: (18, 82)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.gamma_sup     1     2     4\n",
+      "train_final_config.s2_vae.beta                       \n",
+      "2                                    0.22  0.16  0.24\n",
+      "4                                    0.18  0.23  0.27\n",
+      "6                                    0.13  0.20  0.28\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.gamma_sup     1     2     4\n",
+      "train_final_config.s2_vae.beta                       \n",
+      "2                                    0.11  0.06  0.13\n",
+      "4                                    0.14  0.14  0.16\n",
+      "6                                    0.03  0.10  0.11\n",
+      "aggregated_result_df shape: (18, 82)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.gamma_sup     1     2     4\n",
+      "train_final_config.s2_vae.beta                       \n",
+      "2                                    0.26  0.20  0.22\n",
+      "4                                    0.20  0.28  0.24\n",
+      "6                                    0.13  0.20  0.22\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.gamma_sup     1     2     4\n",
+      "train_final_config.s2_vae.beta                       \n",
+      "2                                    0.12  0.14  0.14\n",
+      "4                                    0.11  0.15  0.15\n",
+      "6                                    0.05  0.10  0.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v3.json\"\n",
+    "\n",
+    "df = pd.read_json(aggregated_results_path)\n",
+    "df_criterion_1 = df[df[\"train_final_config.model.supervised_selection_criterion\"] == \"'highest_summed_std_all_dims'\"]\n",
+    "print(f\"aggregated_result_df shape: {df_criterion_1.shape}\")\n",
+    "exp_results = aggregate_metric_results(df_criterion_1, index_name, column_name, metric_names)\n",
+    "for metric in metric_names:\n",
+    "    print(f\"metric {metric} results: \\n {exp_results[metric]}\")\n",
+    "    \n",
+    "df_criterion_2 = df[df[\"train_final_config.model.supervised_selection_criterion\"] == \"'lowest_summed_std_all_dims'\"]\n",
+    "print(f\"aggregated_result_df shape: {df_criterion_2.shape}\")\n",
+    "exp_results = aggregate_metric_results(df_criterion_2, index_name, column_name, metric_names)\n",
+    "for metric in metric_names:\n",
+    "    print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a089af8d-d4f9-405b-97bf-9870656d03c7",
+   "id": "728fa176-c7e5-4051-b0c9-f327309c126a",
    "metadata": {},
    "outputs": [],
    "source": []
